2002-10-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Instance/documentation.make: commented out bogus extra running
	of autogsdoc without args, as this was halting install process.

2002-10-01  Adam Fedor  <fedor@gnu.org>

	* Documentation/filesystem.texi: New file.

	* Documentation/README.MinGWOnCygwin: Update troubleshooting.

Tue Oct  1 01:08:23 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/bundle.make: Rewritten build rules so that they are
	simpler, and we drop creating symbolic links in the directory.
	When on GNUstep, we no longer create the OSX bundle; when on OSX,
	we no longer create the GNUstep bundle.  Also, install using
	Instance/Shared/bundle.make; no longer need to try and preserve
	the symbolic link.  Removed rules to build NeXTstep Info.plist.
	(.PHONY): Removed unused targets.
	
Tue Oct  1 01:02:41 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/Shared/bundle.make (shared-instance-bundle-install): Use 'h' option
	to tar when installing.

Fri Sep 27 03:16:57 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Warning - minor incompatible change/update in API.
	* Master/subproject.make (internal-clean): Do not remove
	Resources/Subproject.
	(internal-distclean): Only remove Resources/ if the subproject has
	xxx_HAS_RESOURCE_BUNDLE = yes.
	* Instance/subproject.make: Only build the Resources/ bundle if
	`xxx_HAS_RESOURCE_BUNDLE = yes' is set in the GNUmakefile.

Fri Sep 27 03:12:46 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Master/subproject.make (SUBPROJECT_NAME): If SUBPROJECT_NAME
	contains more than one word, emit warnings, and drop all words
	except the first one.
	(internal-clean): Simplified expression to compute pswrap files.
	
Thu Sep 26 03:11:42 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Implemented resource bundles for tools.
	* Master/tool.make (internal-distclean): Wipe out the Resources/
	directory if there is any tool with xxx_HAS_RESOURCE_BUNDLE = yes.
	* Instance/tool.make: If xxx_HAS_RESOURCE_BUNDLE = yes, include